# tp3-sistemas-distribuidos

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose-client.yaml  docker-compose-cluster.yaml  docker-compose-dev.yaml  docker-compose-node.yaml  docker-compose-stop.yaml  run.sh
chunk_manager/: Dockerfile  main.py
chunk_manager/chunk_manager/: chunk_manager.py
chunk_manager/protocol/: protocol.py
cities_resume/: Dockerfile  main.py
cities_resume/protocol/: protocol.py
cities_resume/worker/: worker.py
cluster_manager/: Dockerfile  main.py
cluster_manager/cluster_manager/: read_manager.py  replica_manager.py  write_manager.py
cluster_manager/process_manager/: process_manager.py
cluster_manager/protocol/: read_protocol.py  replica_protocol.py  write_protocol.py
coordinator_manager/: Dockerfile  main.py
count_controller/: Dockerfile  main.py
count_summary_controller/: Dockerfile  main.py
date_redirector/: Dockerfile  main.py
date_sorter/: Dockerfile  main.py
dates_resume/: Dockerfile  main.py
map_worker/: Dockerfile  main.py
master_controller/: Dockerfile  main.py
node_watcher/: Dockerfile  main.py
places_manager/: Dockerfile  main.py
processor/: Cargo.toml  Dockerfile
pruebas/: Dockerfile  docker-compose.yaml  main.py
python_base_image/: Dockerfile
reader/: Cargo.toml  Dockerfile
reader/src/: case.rs  main.rs  protocol.rs  reader.rs  region.rs
resume_master_controller/: Dockerfile  main.py
stopper/: Cargo.toml  Dockerfile
summary_controller/: Dockerfile  main.py
top_cities_controller/: Dockerfile  main.py
(+95 files in other folders)
