[package]
name = "processor"
version = "0.1.0"
authors = ["DamiCassinotti <damiancassinotti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
dotproperties = "0.1.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
amiquip = "0.3.3"
